[facets] forcing a fixed height to the group is a bad idea: the container will not properly overflow

--- a/web/data/cubicweb.facets.css
+++ b/web/data/cubicweb.facets.css
@@ -13,7 +13,6 @@
 .facetGroup {
   margin: .3em;
   float: left;
-  max-height: %(facet_Height)s;
 }
 
 div.facetTitle, div.bkSearch  {
